--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,6 @@
-/* HEADER */
+body {
+    background-color: rgb(27, 27, 27);
+}
 
 .main-header {
     text-align: center;
@@ -6,6 +8,30 @@
     font-size: 2rem;
 }
 
-.main-header span {
-    color: rgb(212, 212, 0);
+.tienda {
+    color: white;
+}
+
+.online {
+    color: yellow;
+}
+
+.listaProductos {
+    display: flex;
+    width: 100%;
+    padding-top: 50px;
+}
+
+.listaProductos ul {
+    list-style: none;
+    margin: auto;
+}
+
+.listaProductos ul li {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
+    color: white;
 }
